# www-delivery

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celery_worker.py  docker-compose.yaml  main.py  pyproject.toml  settings.py
celery_tasks/: delivery_costs_task.py
db/: db_setup.py
db/models/: parcel_model.py
db/schemas/: parcel_schemas.py
migrations/: env.py
migrations/versions/: 2024-02-15-16-40-03_2555aba4a9f0_tables_parcels_parcel_types.py
routers/: parcels.py
services/: parcel_service.py
